<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpd_vendor</name>
  <version>0.0.0</version>
  <description>GPD vendor package</description>
  <maintainer email="christoph.hellmann.santos@ipa.fraunhofer.de">Christoph Hellmann Santos</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl</depend>
  <depend>eigen3</depend>
  <depend>opencv</depend>>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
